Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
             {q:"Which is a non-volatile memory?", options:["RAM","ROM","Cache","Register"], answer:"ROM"}
         ],
         ksa: [
-            {q:"Cost ₹500, Profit 20%. Selling Price?", options:["550","600","650","700"], answer:"600"},
-            {q:"Asset = Liabilities + ?", options:["Equity","Profit","Income","Debt"], answer:"Equity"},
-            {q:"Current GST rate in India (highest slab)?", options:["12%","18%","28%","35%"], answer:"28%"},
-            {q:"Which is a direct tax?", options:["GST","Excise Duty","Income Tax","Service Tax"], answer:"Income Tax"},
-            {q:"Who manages monetary policy in India?", options:["SBI","Ministry of Finance","RBI","NITI Aayog"], answer:"RBI"}
+            {q:"What best defines Accounting?", options:["The process of recording only cash transactions","The process of recording, classifying, analyzing, and interpreting financial information","The preparation of financial statements only","The management of business operations"], answer:"The process of recording, classifying, analyzing, and interpreting financial information"},
+            {q:"What is the primary purpose of preparing a Trading Account?", options:["To calculate net profit or net loss","To determine the financial position of the business","To calculate gross profit or gross loss from trading activities","To record cash inflows and outflows"], answer:"To calculate gross profit or gross loss from trading activities"},
+            {q:"Which journal entry is correct for recording a credit sale?", options:["Debit Sales Account and Credit Cash Account","Debit Cash Account and Credit Sales Account","Debit Accounts Receivable and Credit Sales Account","Debit Purchases Account and Credit Accounts Receivable"], answer:"Debit Accounts Receivable and Credit Sales Account"},
+            {q:"Gross Profit Ratio is calculated by using which of the following formulas?", options:["(Net Profit ÷ Net Sales) × 100","(Gross Profit ÷ Total Assets) × 100","(Gross Profit ÷ Net Sales) × 100","(Net Sales ÷ Cost of Goods Sold) × 100"], answer:"(Gross Profit ÷ Net Sales) × 100"},
+            {q:"Depreciation is best described as:", options:["An increase in the market value of an asset","Allocation of the cost of a tangible asset over its useful life","Recording repair expenses of fixed assets","Writing off intangible assets only"], answer:"Allocation of the cost of a tangible asset over its useful life"}
         ],
         atca: [
             {q:"Product, Price, Place and...?", options:["People","Promotion","Plan","Profit"], answer:"Promotion"},
@@ -298,4 +298,5 @@
     }
 </script>
 </body>
+
 </html>
